# kizilai

./: .env.example  .gitignore  README.md  copy_cloned.sh  pyproject.toml  run_stt.sh  test_chatterbox.py  test_e2e.py  test_edge_tts.py  test_full_pipeline.py  test_qwen3.json  test_qwen3_tr.json  test_streaming_pipeline.py  test_stt.py  test_voice_clone.py
docker/: Dockerfile  Dockerfile.chatterbox  Dockerfile.dev  Dockerfile.pipeline  Dockerfile.stt  Dockerfile.stt-service  docker-compose.dev.yml  docker-compose.yml
docs/: BENCHMARK_RESULTS.md  VOICE_AI_RESEARCH_2025.md  WINDOWS_PC_REMOTE_GUIDE.md
freeswitch/dialplan/: sesai.xml
src/: __init__.py  main.py
src/config/: settings.py
src/core/: __init__.py  audio_utils.py  pipeline.py  state_machine.py  streaming_pipeline.py
src/services/llm/: __init__.py  service.py  streaming_service.py
src/services/stt/: __init__.py  service.py  stt_server.py
src/services/telephony/: __init__.py  audiosocket.py
src/services/tts/: __init__.py  edge_tts_service.py  service.py  streaming_service.py
src/utils/: __init__.py  exceptions.py  logging.py
tests/: __init__.py  conftest.py  test_audio_utils.py  test_state_machine.py
